--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>stratagem-tech-portal</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
+    <link rel="icon" type="image/png" href="./public//favicon.png" />
 
     <meta property="og:title" content="stratagem-tech-portal" />
     <meta property="og:description" content="Lovable Generated Project" />
