--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>stratagem-tech-portal</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
-    <link rel="icon" type="image/png" href="./public//favicon.png" />
+    <link rel="icon" type="image/png" href="https://qsort.blob.core.windows.net/media/logofav.jpeg" />
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
     <meta property="og:title" content="stratagem-tech-portal" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Transforming Vision into Digital Reality" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://qsort.blob.core.windows.net/media/logofav.jpeg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
