--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="https://qsort.blob.core.windows.net/media/logofav.jpeg" />
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="stratagem-tech-portal" />
+    <meta property="og:title" content="QSORT" />
     <meta property="og:description" content="Transforming Vision into Digital Reality" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://qsort.blob.core.windows.net/media/logofav.jpeg" />
