--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>stratagem-tech-portal</title>
+    <title>QSORT</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
     <link rel="icon" type="image/png" href="https://qsort.blob.core.windows.net/media/logofav.jpeg" />
