learn more updated

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="author" content="Lovable" />
     <link rel="icon" type="image/png" href="https://qsort.blob.core.windows.net/media/logofav.jpeg" />
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+<!-- public/index.html -->
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&display=swap" rel="stylesheet">
+
 
     <meta property="og:title" content="QSORT" />
     <meta property="og:description" content="Transforming Vision into Digital Reality" />
